--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Test</h1>
+    <img src="img/img1.jpg" alt="naturePhoto1">
+    <img src="img/img2.jpg" alt="naturePhoto2">
+    <img src="img/img3.jpg" alt="naturePhoto3">
+    <img src="img/img4.jpg" alt="naturePhoto4">
+    <img src="img/img5.jpg" alt="naturePhoto5">
 </body>
 </html>
